Minor text updates

--- a/Sentiment Analysis Using NLTK - ShortReviews - Module.ipynb
+++ b/Sentiment Analysis Using NLTK - ShortReviews - Module.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### There are atleast 2 ways to use the saved models.\n",
+    "There are atleast 2 ways to use the saved models.\n",
     "1. Load the models from their saved location and use them.\n",
     "2. Create a module with all the models loaded as aprt of the module and use it.\n",
     "<br>\n",
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Save the following code into sentiment_mod_all.py. Copy the *py file and all the saved algorithms either into the working directory or to the packages directory \n",
+    "Save the following code into sentiment_mod_all.py. Copy the *py file and all the saved algorithms either into the working directory or to the packages directory \n",
     "\n",
     "```Python \n",
     "import nltk\n",
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Once the file and the saved algorithms are is saved into the correct location we can import it like anyother Python module"
+    "Once the file and the saved algorithms are is saved into the correct location we can import it like anyother Python module"
    ]
   },
   {
