--- a/Sentiment Analysis Using NLTK - ShortReviews - Training.ipynb
+++ b/Sentiment Analysis Using NLTK - ShortReviews - Training.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### The code has been taken from the source https://pythonprogramming.net as part of my learning journey. Furhter I have modified the code in part to suit model training etc. Please refer to the source for complete tutorials on NLP using NLTK"
+    "The code has been taken from the source https://pythonprogramming.net as part of my learning journey. Furhter I have modified the code in part to suit model training etc. Please refer to the source for complete tutorials on NLP using NLTK"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### NLTK's FreqDist generates a frequency distribution of the words as a key, value pairs with keys as the words and values as the count of the word"
+    "NLTK's FreqDist generates a frequency distribution of the words as a key, value pairs with keys as the words and values as the count of the word"
    ]
   },
   {
@@ -234,14 +234,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Use the keys() method to get all the words which will form the features of our dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### As we can see from the above the all_words has about 11310 samples. We can either use all these as features or choose the most common 'n' (say 1500). The following cell shows how to get the most common 1500 but for this exercise we will use all the words "
+    "Use the keys() method to get all the words which will form the features of our dataset\n",
+    "\n",
+    "As we can see from the above the all_words has about 11310 samples. We can either use all these as features or choose the most common 'n' (say 1500). The following cell shows how to get the most common 1500 but for this exercise we will use all the words"
    ]
   },
   {
@@ -288,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Define a function which takes a document, tokenizes it and then finds words/ features from it which exist in word_features"
+    "Define a function which takes a document, tokenizes it and then finds words/ features from it which exist in word_features"
    ]
   },
   {
@@ -310,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The next step is to convert our document to featuresets. Each record from the document is converted to a set of features and our target classification"
+    "The next step is to convert our document to featuresets. Each record from the document is converted to a set of features and our target classification"
    ]
   },
   {
@@ -710,7 +705,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### As it takes a long and effort to train the algorithms it is good to save them to the drive so that they can be loaded when required and used"
+    "As it takes a long and effort to train the algorithms it is good to save them to the drive so that they can be loaded when required and used"
    ]
   },
   {
